; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/string/extr_strcasecmp.c_strncasecmp_l.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/string/extr_strcasecmp.c_strncasecmp_l.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @strncasecmp_l(i8* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = call i32 @FIX_LOCALE(i32 %12)
  %14 = load i64, i64* %8, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %55

16:                                               ; preds = %4
  %17 = load i8*, i8** %6, align 8
  %18 = bitcast i8* %17 to i32*
  store i32* %18, i32** %10, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = bitcast i8* %19 to i32*
  store i32* %20, i32** %11, align 8
  br label %21

21:                                               ; preds = %50, %16
  %22 = load i32*, i32** %10, align 8
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @tolower_l(i32 %23, i32 %24)
  %26 = load i32*, i32** %11, align 8
  %27 = getelementptr inbounds i32, i32* %26, i32 1
  store i32* %27, i32** %11, align 8
  %28 = load i32, i32* %26, align 4
  %29 = load i32, i32* %9, align 4
  %30 = call i32 @tolower_l(i32 %28, i32 %29)
  %31 = icmp ne i32 %25, %30
  br i1 %31, label %32, label %43

32:                                               ; preds = %21
  %33 = load i32*, i32** %10, align 8
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @tolower_l(i32 %34, i32 %35)
  %37 = load i32*, i32** %11, align 8
  %38 = getelementptr inbounds i32, i32* %37, i32 -1
  store i32* %38, i32** %11, align 8
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* %9, align 4
  %41 = call i32 @tolower_l(i32 %39, i32 %40)
  %42 = sub nsw i32 %36, %41
  store i32 %42, i32* %5, align 4
  br label %56

43:                                               ; preds = %21
  %44 = load i32*, i32** %10, align 8
  %45 = getelementptr inbounds i32, i32* %44, i32 1
  store i32* %45, i32** %10, align 8
  %46 = load i32, i32* %44, align 4
  %47 = icmp eq i32 %46, 0
  br i1 %47, label %48, label %49

48:                                               ; preds = %43
  br label %54

49:                                               ; preds = %43
  br label %50

50:                                               ; preds = %49
  %51 = load i64, i64* %8, align 8
  %52 = add i64 %51, -1
  store i64 %52, i64* %8, align 8
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %21, label %54

54:                                               ; preds = %50, %48
  br label %55

55:                                               ; preds = %54, %4
  store i32 0, i32* %5, align 4
  br label %56

56:                                               ; preds = %55, %32
  %57 = load i32, i32* %5, align 4
  ret i32 %57
}

declare dso_local i32 @FIX_LOCALE(i32) #1

declare dso_local i32 @tolower_l(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
